// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authentication: APIKEY No Views APIKEY creates a package.json file 1`] = `
"{
  \\"name\\": \\"apikeyintegration\\",
  \\"version\\": \\"0.0.1\\",
  \\"description\\": \\"APIKEYIntegration\\",
  \\"main\\": \\"dist/index.js\\",
  \\"types\\": \\"dist/types/components.d.ts\\",
  \\"module\\": \\"dist/esm/index.js\\",
  \\"collection\\": \\"dist/collection/collection-manifest.json\\",
  \\"scripts\\": {
    \\"bearer\\": \\"bearer\\",
    \\"push\\": \\"bearer push\\",
    \\"start\\": \\"bearer start\\",
    \\"invoke\\": \\"bearer invoke\\",
    \\"generate\\": \\"bearer generate\\"
  },
  \\"dependencies\\": {
    \\"@bearer/functions\\": \\"latest\\",
    \\"axios\\": \\"^0.18.0\\"
  },
  \\"devDependencies\\": {
    \\"@bearer/cli\\": \\"latest\\",
    \\"@types/node\\": \\"^10.12.25\\"
  },
  \\"license\\": \\"MIT\\"
}
"
`;

exports[`Authentication: APIKEY No Views APIKEY creates an auth.config.json file 1`] = `
"{
  \\"authType\\": \\"APIKEY\\"
}
"
`;

exports[`Authentication: APIKEY No Views APIKEY produces an output 1`] = `
"
What's next?

,[1m   cd ./test/.artifacts/init/new/APIKEY/APIKEYIntegration[22m
,[32mIntegration initialized, name: APIKEYIntegration, authentication type: API Key[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/APIKEY/APIKEYIntegration/.gitignore[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/APIKEY/APIKEYIntegration/.integrationrc[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/APIKEY/APIKEYIntegration/LICENSE[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/APIKEY/APIKEYIntegration/auth.config.json[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/APIKEY/APIKEYIntegration/functions/client.ts[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/APIKEY/APIKEYIntegration/functions/tsconfig.json[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/APIKEY/APIKEYIntegration/package.json[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/APIKEY/APIKEYIntegration/tsconfig.json[39m
,* read the bearer documentation at https://docs.bearer.sh

,* start your local development environment by running:

"
`;

exports[`Authentication: APIKEY With Views APIKEY creates a package.json file 1`] = `
"{
  \\"name\\": \\"apikeyintegration\\",
  \\"version\\": \\"0.0.1\\",
  \\"description\\": \\"APIKEYIntegration\\",
  \\"main\\": \\"dist/index.js\\",
  \\"types\\": \\"dist/types/components.d.ts\\",
  \\"module\\": \\"dist/esm/index.js\\",
  \\"collection\\": \\"dist/collection/collection-manifest.json\\",
  \\"scripts\\": {
    \\"bearer\\": \\"bearer\\",
    \\"push\\": \\"bearer push\\",
    \\"start\\": \\"bearer start\\",
    \\"invoke\\": \\"bearer invoke\\",
    \\"generate\\": \\"bearer generate\\"
  },
  \\"dependencies\\": {
    \\"@bearer/functions\\": \\"latest\\",
    \\"axios\\": \\"^0.18.0\\",
    \\"@bearer/core\\": \\"latest\\",
    \\"@bearer/ui\\": \\"latest\\"
  },
  \\"devDependencies\\": {
    \\"@bearer/cli\\": \\"latest\\",
    \\"@types/node\\": \\"^10.12.25\\",
    \\"@bearer/js\\": \\"latest\\"
  },
  \\"license\\": \\"MIT\\",
  \\"peerDependencies\\": {
    \\"@bearer/js\\": \\"latest\\"
  }
}"
`;

exports[`Authentication: APIKEY With Views APIKEY creates an auth.config.json file 1`] = `
"{
  \\"authType\\": \\"APIKEY\\"
}
"
`;

exports[`Authentication: APIKEY With Views APIKEY produces an output 1`] = `
"
What's next?

,[1m   cd ./test/.artifacts/initWithViews/new/APIKEY/APIKEYIntegration[22m
,[32mIntegration initialized, name: APIKEYIntegration, authentication type: API Key[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/APIKEY/APIKEYIntegration/.gitignore[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/APIKEY/APIKEYIntegration/.integrationrc[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/APIKEY/APIKEYIntegration/LICENSE[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/APIKEY/APIKEYIntegration/auth.config.json[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/APIKEY/APIKEYIntegration/functions/client.ts[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/APIKEY/APIKEYIntegration/functions/tsconfig.json[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/APIKEY/APIKEYIntegration/package.json[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/APIKEY/APIKEYIntegration/spec.ts[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/APIKEY/APIKEYIntegration/tsconfig.json[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/APIKEY/APIKEYIntegration/views/index.html[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/APIKEY/APIKEYIntegration/views/index.ts[39m
,* read the bearer documentation at https://docs.bearer.sh

,* start your local development environment by running:

"
`;

exports[`Authentication: BASIC No Views BASIC creates a package.json file 1`] = `
"{
  \\"name\\": \\"basicintegration\\",
  \\"version\\": \\"0.0.1\\",
  \\"description\\": \\"BASICIntegration\\",
  \\"main\\": \\"dist/index.js\\",
  \\"types\\": \\"dist/types/components.d.ts\\",
  \\"module\\": \\"dist/esm/index.js\\",
  \\"collection\\": \\"dist/collection/collection-manifest.json\\",
  \\"scripts\\": {
    \\"bearer\\": \\"bearer\\",
    \\"push\\": \\"bearer push\\",
    \\"start\\": \\"bearer start\\",
    \\"invoke\\": \\"bearer invoke\\",
    \\"generate\\": \\"bearer generate\\"
  },
  \\"dependencies\\": {
    \\"@bearer/functions\\": \\"latest\\",
    \\"axios\\": \\"^0.18.0\\"
  },
  \\"devDependencies\\": {
    \\"@bearer/cli\\": \\"latest\\",
    \\"@types/node\\": \\"^10.12.25\\"
  },
  \\"license\\": \\"MIT\\"
}
"
`;

exports[`Authentication: BASIC No Views BASIC creates an auth.config.json file 1`] = `
"{
  \\"authType\\": \\"BASIC\\"
}
"
`;

exports[`Authentication: BASIC No Views BASIC produces an output 1`] = `
"
What's next?

,[1m   cd ./test/.artifacts/init/new/BASIC/BASICIntegration[22m
,[32mIntegration initialized, name: BASICIntegration, authentication type: Basic Auth[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/BASIC/BASICIntegration/.gitignore[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/BASIC/BASICIntegration/.integrationrc[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/BASIC/BASICIntegration/LICENSE[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/BASIC/BASICIntegration/auth.config.json[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/BASIC/BASICIntegration/functions/client.ts[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/BASIC/BASICIntegration/functions/tsconfig.json[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/BASIC/BASICIntegration/package.json[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/BASIC/BASICIntegration/tsconfig.json[39m
,* read the bearer documentation at https://docs.bearer.sh

,* start your local development environment by running:

"
`;

exports[`Authentication: BASIC With Views BASIC creates a package.json file 1`] = `
"{
  \\"name\\": \\"basicintegration\\",
  \\"version\\": \\"0.0.1\\",
  \\"description\\": \\"BASICIntegration\\",
  \\"main\\": \\"dist/index.js\\",
  \\"types\\": \\"dist/types/components.d.ts\\",
  \\"module\\": \\"dist/esm/index.js\\",
  \\"collection\\": \\"dist/collection/collection-manifest.json\\",
  \\"scripts\\": {
    \\"bearer\\": \\"bearer\\",
    \\"push\\": \\"bearer push\\",
    \\"start\\": \\"bearer start\\",
    \\"invoke\\": \\"bearer invoke\\",
    \\"generate\\": \\"bearer generate\\"
  },
  \\"dependencies\\": {
    \\"@bearer/functions\\": \\"latest\\",
    \\"axios\\": \\"^0.18.0\\",
    \\"@bearer/core\\": \\"latest\\",
    \\"@bearer/ui\\": \\"latest\\"
  },
  \\"devDependencies\\": {
    \\"@bearer/cli\\": \\"latest\\",
    \\"@types/node\\": \\"^10.12.25\\",
    \\"@bearer/js\\": \\"latest\\"
  },
  \\"license\\": \\"MIT\\",
  \\"peerDependencies\\": {
    \\"@bearer/js\\": \\"latest\\"
  }
}"
`;

exports[`Authentication: BASIC With Views BASIC creates an auth.config.json file 1`] = `
"{
  \\"authType\\": \\"BASIC\\"
}
"
`;

exports[`Authentication: BASIC With Views BASIC produces an output 1`] = `
"
What's next?

,[1m   cd ./test/.artifacts/initWithViews/new/BASIC/BASICIntegration[22m
,[32mIntegration initialized, name: BASICIntegration, authentication type: Basic Auth[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/BASIC/BASICIntegration/.gitignore[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/BASIC/BASICIntegration/.integrationrc[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/BASIC/BASICIntegration/LICENSE[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/BASIC/BASICIntegration/auth.config.json[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/BASIC/BASICIntegration/functions/client.ts[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/BASIC/BASICIntegration/functions/tsconfig.json[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/BASIC/BASICIntegration/package.json[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/BASIC/BASICIntegration/spec.ts[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/BASIC/BASICIntegration/tsconfig.json[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/BASIC/BASICIntegration/views/index.html[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/BASIC/BASICIntegration/views/index.ts[39m
,* read the bearer documentation at https://docs.bearer.sh

,* start your local development environment by running:

"
`;

exports[`Authentication: CUSTOM No Views CUSTOM creates a package.json file 1`] = `
"{
  \\"name\\": \\"customintegration\\",
  \\"version\\": \\"0.0.1\\",
  \\"description\\": \\"CUSTOMIntegration\\",
  \\"main\\": \\"dist/index.js\\",
  \\"types\\": \\"dist/types/components.d.ts\\",
  \\"module\\": \\"dist/esm/index.js\\",
  \\"collection\\": \\"dist/collection/collection-manifest.json\\",
  \\"scripts\\": {
    \\"bearer\\": \\"bearer\\",
    \\"push\\": \\"bearer push\\",
    \\"start\\": \\"bearer start\\",
    \\"invoke\\": \\"bearer invoke\\",
    \\"generate\\": \\"bearer generate\\"
  },
  \\"dependencies\\": {
    \\"@bearer/functions\\": \\"latest\\",
    \\"axios\\": \\"^0.18.0\\"
  },
  \\"devDependencies\\": {
    \\"@bearer/cli\\": \\"latest\\",
    \\"@types/node\\": \\"^10.12.25\\"
  },
  \\"license\\": \\"MIT\\"
}
"
`;

exports[`Authentication: CUSTOM No Views CUSTOM creates an auth.config.json file 1`] = `
"{
  \\"authType\\": \\"CUSTOM\\"
}
"
`;

exports[`Authentication: CUSTOM No Views CUSTOM produces an output 1`] = `
"
What's next?

,[1m   cd ./test/.artifacts/init/new/CUSTOM/CUSTOMIntegration[22m
,[32mIntegration initialized, name: CUSTOMIntegration, authentication type: Custom[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/CUSTOM/CUSTOMIntegration/.gitignore[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/CUSTOM/CUSTOMIntegration/.integrationrc[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/CUSTOM/CUSTOMIntegration/LICENSE[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/CUSTOM/CUSTOMIntegration/auth.config.json[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/CUSTOM/CUSTOMIntegration/functions/client.ts[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/CUSTOM/CUSTOMIntegration/functions/tsconfig.json[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/CUSTOM/CUSTOMIntegration/package.json[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/CUSTOM/CUSTOMIntegration/tsconfig.json[39m
,* read the bearer documentation at https://docs.bearer.sh

,* start your local development environment by running:

"
`;

exports[`Authentication: CUSTOM With Views CUSTOM creates a package.json file 1`] = `
"{
  \\"name\\": \\"customintegration\\",
  \\"version\\": \\"0.0.1\\",
  \\"description\\": \\"CUSTOMIntegration\\",
  \\"main\\": \\"dist/index.js\\",
  \\"types\\": \\"dist/types/components.d.ts\\",
  \\"module\\": \\"dist/esm/index.js\\",
  \\"collection\\": \\"dist/collection/collection-manifest.json\\",
  \\"scripts\\": {
    \\"bearer\\": \\"bearer\\",
    \\"push\\": \\"bearer push\\",
    \\"start\\": \\"bearer start\\",
    \\"invoke\\": \\"bearer invoke\\",
    \\"generate\\": \\"bearer generate\\"
  },
  \\"dependencies\\": {
    \\"@bearer/functions\\": \\"latest\\",
    \\"axios\\": \\"^0.18.0\\",
    \\"@bearer/core\\": \\"latest\\",
    \\"@bearer/ui\\": \\"latest\\"
  },
  \\"devDependencies\\": {
    \\"@bearer/cli\\": \\"latest\\",
    \\"@types/node\\": \\"^10.12.25\\",
    \\"@bearer/js\\": \\"latest\\"
  },
  \\"license\\": \\"MIT\\",
  \\"peerDependencies\\": {
    \\"@bearer/js\\": \\"latest\\"
  }
}"
`;

exports[`Authentication: CUSTOM With Views CUSTOM creates an auth.config.json file 1`] = `
"{
  \\"authType\\": \\"CUSTOM\\"
}
"
`;

exports[`Authentication: CUSTOM With Views CUSTOM produces an output 1`] = `
"
What's next?

,[1m   cd ./test/.artifacts/initWithViews/new/CUSTOM/CUSTOMIntegration[22m
,[32mIntegration initialized, name: CUSTOMIntegration, authentication type: Custom[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/CUSTOM/CUSTOMIntegration/.gitignore[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/CUSTOM/CUSTOMIntegration/.integrationrc[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/CUSTOM/CUSTOMIntegration/LICENSE[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/CUSTOM/CUSTOMIntegration/auth.config.json[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/CUSTOM/CUSTOMIntegration/functions/client.ts[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/CUSTOM/CUSTOMIntegration/functions/tsconfig.json[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/CUSTOM/CUSTOMIntegration/package.json[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/CUSTOM/CUSTOMIntegration/spec.ts[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/CUSTOM/CUSTOMIntegration/tsconfig.json[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/CUSTOM/CUSTOMIntegration/views/index.html[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/CUSTOM/CUSTOMIntegration/views/index.ts[39m
,* read the bearer documentation at https://docs.bearer.sh

,* start your local development environment by running:

"
`;

exports[`Authentication: NONE No Views NONE creates a package.json file 1`] = `
"{
  \\"name\\": \\"noneintegration\\",
  \\"version\\": \\"0.0.1\\",
  \\"description\\": \\"NONEIntegration\\",
  \\"main\\": \\"dist/index.js\\",
  \\"types\\": \\"dist/types/components.d.ts\\",
  \\"module\\": \\"dist/esm/index.js\\",
  \\"collection\\": \\"dist/collection/collection-manifest.json\\",
  \\"scripts\\": {
    \\"bearer\\": \\"bearer\\",
    \\"push\\": \\"bearer push\\",
    \\"start\\": \\"bearer start\\",
    \\"invoke\\": \\"bearer invoke\\",
    \\"generate\\": \\"bearer generate\\"
  },
  \\"dependencies\\": {
    \\"@bearer/functions\\": \\"latest\\",
    \\"axios\\": \\"^0.18.0\\"
  },
  \\"devDependencies\\": {
    \\"@bearer/cli\\": \\"latest\\",
    \\"@types/node\\": \\"^10.12.25\\"
  },
  \\"license\\": \\"MIT\\"
}
"
`;

exports[`Authentication: NONE No Views NONE creates an auth.config.json file 1`] = `
"{
  \\"authType\\": \\"NONE\\"
}
"
`;

exports[`Authentication: NONE No Views NONE produces an output 1`] = `
"
What's next?

,[1m   cd ./test/.artifacts/init/new/NONE/NONEIntegration[22m
,[32mIntegration initialized, name: NONEIntegration, authentication type: NoAuth[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/NONE/NONEIntegration/.gitignore[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/NONE/NONEIntegration/.integrationrc[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/NONE/NONEIntegration/LICENSE[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/NONE/NONEIntegration/auth.config.json[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/NONE/NONEIntegration/functions/client.ts[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/NONE/NONEIntegration/functions/tsconfig.json[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/NONE/NONEIntegration/package.json[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/NONE/NONEIntegration/tsconfig.json[39m
,* read the bearer documentation at https://docs.bearer.sh

,* start your local development environment by running:

"
`;

exports[`Authentication: NONE With Views NONE creates a package.json file 1`] = `
"{
  \\"name\\": \\"noneintegration\\",
  \\"version\\": \\"0.0.1\\",
  \\"description\\": \\"NONEIntegration\\",
  \\"main\\": \\"dist/index.js\\",
  \\"types\\": \\"dist/types/components.d.ts\\",
  \\"module\\": \\"dist/esm/index.js\\",
  \\"collection\\": \\"dist/collection/collection-manifest.json\\",
  \\"scripts\\": {
    \\"bearer\\": \\"bearer\\",
    \\"push\\": \\"bearer push\\",
    \\"start\\": \\"bearer start\\",
    \\"invoke\\": \\"bearer invoke\\",
    \\"generate\\": \\"bearer generate\\"
  },
  \\"dependencies\\": {
    \\"@bearer/functions\\": \\"latest\\",
    \\"axios\\": \\"^0.18.0\\",
    \\"@bearer/core\\": \\"latest\\",
    \\"@bearer/ui\\": \\"latest\\"
  },
  \\"devDependencies\\": {
    \\"@bearer/cli\\": \\"latest\\",
    \\"@types/node\\": \\"^10.12.25\\",
    \\"@bearer/js\\": \\"latest\\"
  },
  \\"license\\": \\"MIT\\",
  \\"peerDependencies\\": {
    \\"@bearer/js\\": \\"latest\\"
  }
}"
`;

exports[`Authentication: NONE With Views NONE creates an auth.config.json file 1`] = `
"{
  \\"authType\\": \\"NONE\\"
}
"
`;

exports[`Authentication: NONE With Views NONE produces an output 1`] = `
"
What's next?

,[1m   cd ./test/.artifacts/initWithViews/new/NONE/NONEIntegration[22m
,[32mIntegration initialized, name: NONEIntegration, authentication type: NoAuth[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/NONE/NONEIntegration/.gitignore[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/NONE/NONEIntegration/.integrationrc[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/NONE/NONEIntegration/LICENSE[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/NONE/NONEIntegration/auth.config.json[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/NONE/NONEIntegration/functions/client.ts[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/NONE/NONEIntegration/functions/tsconfig.json[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/NONE/NONEIntegration/package.json[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/NONE/NONEIntegration/spec.ts[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/NONE/NONEIntegration/tsconfig.json[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/NONE/NONEIntegration/views/index.html[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/NONE/NONEIntegration/views/index.ts[39m
,* read the bearer documentation at https://docs.bearer.sh

,* start your local development environment by running:

"
`;

exports[`Authentication: OAUTH1 No Views OAUTH1 creates a package.json file 1`] = `
"{
  \\"name\\": \\"oauth1-integration\\",
  \\"version\\": \\"0.0.1\\",
  \\"description\\": \\"OAUTH1Integration\\",
  \\"main\\": \\"dist/index.js\\",
  \\"types\\": \\"dist/types/components.d.ts\\",
  \\"module\\": \\"dist/esm/index.js\\",
  \\"collection\\": \\"dist/collection/collection-manifest.json\\",
  \\"scripts\\": {
    \\"bearer\\": \\"bearer\\",
    \\"push\\": \\"bearer push\\",
    \\"start\\": \\"bearer start\\",
    \\"invoke\\": \\"bearer invoke\\",
    \\"generate\\": \\"bearer generate\\"
  },
  \\"dependencies\\": {
    \\"@bearer/functions\\": \\"latest\\",
    \\"oauth\\": \\"^0.9.15\\"
  },
  \\"devDependencies\\": {
    \\"@bearer/cli\\": \\"latest\\",
    \\"@types/node\\": \\"^10.12.25\\"
  },
  \\"license\\": \\"MIT\\"
}
"
`;

exports[`Authentication: OAUTH1 No Views OAUTH1 creates an auth.config.json file 1`] = `
"{
  \\"requestTokenURL\\": \\"https://example.com/oauth/RequestToken\\",
  \\"accessTokenURL\\": \\"https://example.com/oauth/AccessToken\\",
  \\"userAuthorizationURL\\": \\"https://example.com/oauth/Authorize\\",
  \\"callbackURL\\": \\"https://int.bearer.sh/v2/auth/callback\\",
  \\"authType\\": \\"OAUTH1\\",
  \\"signatureMethod\\": \\"HMAC-SHA1\\",
  \\"tokenParams\\": {},
  \\"authorizationParams\\": {},
  \\"config\\": {
    \\"scope\\": []
  }
}
"
`;

exports[`Authentication: OAUTH1 No Views OAUTH1 produces an output 1`] = `
"
What's next?

,[1m   cd ./test/.artifacts/init/new/OAUTH1/OAUTH1Integration[22m
,[32mIntegration initialized, name: OAUTH1Integration, authentication type: OAuth1[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/OAUTH1/OAUTH1Integration/.gitignore[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/OAUTH1/OAUTH1Integration/.integrationrc[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/OAUTH1/OAUTH1Integration/LICENSE[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/OAUTH1/OAUTH1Integration/auth.config.json[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/OAUTH1/OAUTH1Integration/functions/client.ts[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/OAUTH1/OAUTH1Integration/functions/tsconfig.json[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/OAUTH1/OAUTH1Integration/package.json[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/OAUTH1/OAUTH1Integration/tsconfig.json[39m
,* read the bearer documentation at https://docs.bearer.sh

,* start your local development environment by running:

"
`;

exports[`Authentication: OAUTH1 With Views OAUTH1 creates a package.json file 1`] = `
"{
  \\"name\\": \\"oauth1-integration\\",
  \\"version\\": \\"0.0.1\\",
  \\"description\\": \\"OAUTH1Integration\\",
  \\"main\\": \\"dist/index.js\\",
  \\"types\\": \\"dist/types/components.d.ts\\",
  \\"module\\": \\"dist/esm/index.js\\",
  \\"collection\\": \\"dist/collection/collection-manifest.json\\",
  \\"scripts\\": {
    \\"bearer\\": \\"bearer\\",
    \\"push\\": \\"bearer push\\",
    \\"start\\": \\"bearer start\\",
    \\"invoke\\": \\"bearer invoke\\",
    \\"generate\\": \\"bearer generate\\"
  },
  \\"dependencies\\": {
    \\"@bearer/functions\\": \\"latest\\",
    \\"oauth\\": \\"^0.9.15\\",
    \\"@bearer/core\\": \\"latest\\",
    \\"@bearer/ui\\": \\"latest\\"
  },
  \\"devDependencies\\": {
    \\"@bearer/cli\\": \\"latest\\",
    \\"@types/node\\": \\"^10.12.25\\",
    \\"@bearer/js\\": \\"latest\\"
  },
  \\"license\\": \\"MIT\\",
  \\"peerDependencies\\": {
    \\"@bearer/js\\": \\"latest\\"
  }
}"
`;

exports[`Authentication: OAUTH1 With Views OAUTH1 creates an auth.config.json file 1`] = `
"{
  \\"requestTokenURL\\": \\"https://example.com/oauth/RequestToken\\",
  \\"accessTokenURL\\": \\"https://example.com/oauth/AccessToken\\",
  \\"userAuthorizationURL\\": \\"https://example.com/oauth/Authorize\\",
  \\"callbackURL\\": \\"https://int.bearer.sh/v2/auth/callback\\",
  \\"authType\\": \\"OAUTH1\\",
  \\"signatureMethod\\": \\"HMAC-SHA1\\",
  \\"tokenParams\\": {},
  \\"authorizationParams\\": {},
  \\"config\\": {
    \\"scope\\": []
  }
}
"
`;

exports[`Authentication: OAUTH1 With Views OAUTH1 produces an output 1`] = `
"
What's next?

,[1m   cd ./test/.artifacts/initWithViews/new/OAUTH1/OAUTH1Integration[22m
,[32mIntegration initialized, name: OAUTH1Integration, authentication type: OAuth1[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/OAUTH1/OAUTH1Integration/.gitignore[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/OAUTH1/OAUTH1Integration/.integrationrc[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/OAUTH1/OAUTH1Integration/LICENSE[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/OAUTH1/OAUTH1Integration/auth.config.json[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/OAUTH1/OAUTH1Integration/functions/client.ts[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/OAUTH1/OAUTH1Integration/functions/tsconfig.json[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/OAUTH1/OAUTH1Integration/package.json[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/OAUTH1/OAUTH1Integration/spec.ts[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/OAUTH1/OAUTH1Integration/tsconfig.json[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/OAUTH1/OAUTH1Integration/views/index.html[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/OAUTH1/OAUTH1Integration/views/index.ts[39m
,* read the bearer documentation at https://docs.bearer.sh

,* start your local development environment by running:

"
`;

exports[`Authentication: OAUTH2 No Views OAUTH2 creates a package.json file 1`] = `
"{
  \\"name\\": \\"oauth2-integration\\",
  \\"version\\": \\"0.0.1\\",
  \\"description\\": \\"OAUTH2Integration\\",
  \\"main\\": \\"dist/index.js\\",
  \\"types\\": \\"dist/types/components.d.ts\\",
  \\"module\\": \\"dist/esm/index.js\\",
  \\"collection\\": \\"dist/collection/collection-manifest.json\\",
  \\"scripts\\": {
    \\"bearer\\": \\"bearer\\",
    \\"push\\": \\"bearer push\\",
    \\"start\\": \\"bearer start\\",
    \\"invoke\\": \\"bearer invoke\\",
    \\"generate\\": \\"bearer generate\\"
  },
  \\"dependencies\\": {
    \\"@bearer/functions\\": \\"latest\\",
    \\"axios\\": \\"^0.18.0\\"
  },
  \\"devDependencies\\": {
    \\"@bearer/cli\\": \\"latest\\",
    \\"@types/node\\": \\"^10.12.25\\"
  },
  \\"license\\": \\"MIT\\"
}
"
`;

exports[`Authentication: OAUTH2 No Views OAUTH2 creates an auth.config.json file 1`] = `
"{
  \\"authorizationURL\\": \\"https://example.com/authorizationUrl\\",
  \\"tokenURL\\": \\"https://example.com/tokenUrl\\",
  \\"authType\\": \\"OAUTH2\\",
  \\"tokenParams\\": {},
  \\"authorizationParams\\": {},
  \\"config\\": {
    \\"scope\\": []
  }
}
"
`;

exports[`Authentication: OAUTH2 No Views OAUTH2 produces an output 1`] = `
"
What's next?

,[1m   cd ./test/.artifacts/init/new/OAUTH2/OAUTH2Integration[22m
,[32mIntegration initialized, name: OAUTH2Integration, authentication type: OAuth2[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/OAUTH2/OAUTH2Integration/.gitignore[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/OAUTH2/OAUTH2Integration/.integrationrc[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/OAUTH2/OAUTH2Integration/LICENSE[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/OAUTH2/OAUTH2Integration/auth.config.json[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/OAUTH2/OAUTH2Integration/functions/client.ts[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/OAUTH2/OAUTH2Integration/functions/tsconfig.json[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/OAUTH2/OAUTH2Integration/package.json[39m
,[90m    create: [39m[37mtest/.artifacts/init/new/OAUTH2/OAUTH2Integration/tsconfig.json[39m
,* read the bearer documentation at https://docs.bearer.sh

,* start your local development environment by running:

"
`;

exports[`Authentication: OAUTH2 With Views OAUTH2 creates a package.json file 1`] = `
"{
  \\"name\\": \\"oauth2-integration\\",
  \\"version\\": \\"0.0.1\\",
  \\"description\\": \\"OAUTH2Integration\\",
  \\"main\\": \\"dist/index.js\\",
  \\"types\\": \\"dist/types/components.d.ts\\",
  \\"module\\": \\"dist/esm/index.js\\",
  \\"collection\\": \\"dist/collection/collection-manifest.json\\",
  \\"scripts\\": {
    \\"bearer\\": \\"bearer\\",
    \\"push\\": \\"bearer push\\",
    \\"start\\": \\"bearer start\\",
    \\"invoke\\": \\"bearer invoke\\",
    \\"generate\\": \\"bearer generate\\"
  },
  \\"dependencies\\": {
    \\"@bearer/functions\\": \\"latest\\",
    \\"axios\\": \\"^0.18.0\\",
    \\"@bearer/core\\": \\"latest\\",
    \\"@bearer/ui\\": \\"latest\\"
  },
  \\"devDependencies\\": {
    \\"@bearer/cli\\": \\"latest\\",
    \\"@types/node\\": \\"^10.12.25\\",
    \\"@bearer/js\\": \\"latest\\"
  },
  \\"license\\": \\"MIT\\",
  \\"peerDependencies\\": {
    \\"@bearer/js\\": \\"latest\\"
  }
}"
`;

exports[`Authentication: OAUTH2 With Views OAUTH2 creates an auth.config.json file 1`] = `
"{
  \\"authorizationURL\\": \\"https://example.com/authorizationUrl\\",
  \\"tokenURL\\": \\"https://example.com/tokenUrl\\",
  \\"authType\\": \\"OAUTH2\\",
  \\"tokenParams\\": {},
  \\"authorizationParams\\": {},
  \\"config\\": {
    \\"scope\\": []
  }
}
"
`;

exports[`Authentication: OAUTH2 With Views OAUTH2 produces an output 1`] = `
"
What's next?

,[1m   cd ./test/.artifacts/initWithViews/new/OAUTH2/OAUTH2Integration[22m
,[32mIntegration initialized, name: OAUTH2Integration, authentication type: OAuth2[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/OAUTH2/OAUTH2Integration/.gitignore[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/OAUTH2/OAUTH2Integration/.integrationrc[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/OAUTH2/OAUTH2Integration/LICENSE[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/OAUTH2/OAUTH2Integration/auth.config.json[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/OAUTH2/OAUTH2Integration/functions/client.ts[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/OAUTH2/OAUTH2Integration/functions/tsconfig.json[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/OAUTH2/OAUTH2Integration/package.json[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/OAUTH2/OAUTH2Integration/spec.ts[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/OAUTH2/OAUTH2Integration/tsconfig.json[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/OAUTH2/OAUTH2Integration/views/index.html[39m
,[90m    create: [39m[37mtest/.artifacts/initWithViews/new/OAUTH2/OAUTH2Integration/views/index.ts[39m
,* read the bearer documentation at https://docs.bearer.sh

,* start your local development environment by running:

"
`;

exports[`askForAuthType display all autentication types 1`] = `
Array [
  Array [
    Object {
      "choices": Array [
        Object {
          "name": "OAuth1",
          "value": "OAUTH1",
        },
        Object {
          "name": "OAuth2",
          "value": "OAUTH2",
        },
        Object {
          "name": "Basic Auth",
          "value": "BASIC",
        },
        Object {
          "name": "API Key",
          "value": "APIKEY",
        },
        Object {
          "name": "NoAuth",
          "value": "NONE",
        },
        Object {
          "name": "Custom",
          "value": "CUSTOM",
        },
      ],
      "message": "Select an authentication method for the API you want to consume:",
      "name": "authenticationType",
      "type": "list",
    },
  ],
]
`;

exports[`selectFolder multiple integrations found prompt to choose one from a list 1`] = `
Array [
  Array [
    Object {
      "choices": Array [
        Object {
          "name": "provider/1-one",
          "value": "provider/1-one",
        },
        Object {
          "name": "provider/2-one",
          "value": "provider/2-one",
        },
        Object {
          "name": "provider/3-one",
          "value": "provider/3-one",
        },
      ],
      "message": "Select a template",
      "name": "selected",
      "type": "list",
    },
  ],
]
`;
